<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/smoothYellow"
            android:minHeight="?attr/actionBarSize"
            android:layout_weight="0"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/darkGrey"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/would_you_like_to_meditate_in_silence"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/smoothYellow"
                    android:text="@string/meditate_in_silence"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/meditationTime"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:text="@string/time_to_meditate_minutes"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:fontFamily="sans-serif-light"
                        android:layout_marginBottom="40dp"
                        android:selectAllOnFocus="true"
                        android:backgroundTint="@color/smoothYellow"
                        android:textCursorDrawable="@drawable/color_cursor"
                        />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="minutes"
                        android:textSize="14sp"
                        />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/startBtn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/start"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-light"
                android:background="@color/smoothYellow"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:max="100"
                android:min="0"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

            <TextView
                android:id="@+id/timeMeditating"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_00_00_00"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:gravity="right|bottom"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="Add a meditation by hand"
                app:srcCompat="@drawable/ic_plus_icon_invert"
                android:onClick="addMeditationClicked"/>

        </LinearLayout>

    </LinearLayout>